Duplicated context-group demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
   test {{ title }}
 </div>
 <div i18n>test2 {{ title }}</div>
+
+<a href="https://www.google.com" i18n-title title="Some title" *ngIf="true"></a>
