add plural interpolation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,8 @@
 <div i18n>test2 {{ title }}</div>
 
 <a href="https://www.google.com" i18n-title title="Some title" *ngIf="true"></a>
+
+<a i18n>
+  {{ 1 }} {1, plural, =1 {one} other {more}}
+</a>
+
